2022_04_15_commit * modify page-title design * implement pop-up search bar * restructure narrow-nav menu * restructure cardmain * add global variable to card_common * solve margin collapsing problem * fix minor bug

--- a/src/main/resources/static/css/cardmain.css
+++ b/src/main/resources/static/css/cardmain.css
@@ -6,15 +6,28 @@
     grid-row-gap: 30px;
 }
 
-.card-category-frame {
-    display: inline-block;
-}
-
 .card-category {
     width: 200px;
     height: 100px;
     border-radius: 20px;
-    padding: 5px;
+    padding: 10px;
+}
+
+.card-category-name {
+    display: flex;
+    height: 80%;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
+    font-weight: bold;
+
+}
+
+.card-category-count {
+    display: flex;
+    height: 20%;
+    align-items: center;
+    justify-content: right;
 }
 
 .card-category:hover {
